// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H2 renders correctly 1`] = `<h2 />`;

exports[`H2 renders correctly 2`] = `
<h2>
  test h2
</h2>
`;

exports[`H2 renders correctly 3`] = `
<h2>
  <span>
    testing 123
  </span>
  <div>
    testing 456
  </div>
</h2>
`;

exports[`H2 renders correctly with CSS class 1`] = `
<h2
  className="title"
>
  test h2
</h2>
`;
